--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,8 @@ install_requires =
     gino
     aiohttp
     gino-aiohttp
+    # fix bug in static for nested apps
+    aiohttp-apispec@git+git://github.com/maximdanilchenko/aiohttp-apispec.git@397a48588d0c5c52b63f85ed1d927286bbaad8e7
     # in order to run async tasks within an async context
     nest_asyncio
     # rq w/ async support
